assets/css/gallery.css
/* Global Values */

:root {
    --primary: rgb(252, 252, 212);
    --secondary: rgb(10, 68, 61);
    --tertiary: #c3fcf2;
    --other: #649b92;
    --light-brown: #c3c39d;
    --dark-brown: #484838;
}

* {
    box-sizing: border-box;
    line-height: normal;
    font-family: 'poppins';
}

body {
    background-color: var(--primary);
    overflow: auto;
}

h1 {
    text-align: center;
    margin: 15px;
    padding: 15px;
    font-size: 50px;
    font-weight: bold;
    color: var(--secondary);
}


nav {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    text-align: center;
}

nav a {
    padding: 5px;
    margin: 30px;
    color: var(--secondary);
    font-size: 26px;
    text-decoration: none;
}


/* Projects Section */

.gallery {
    height: 85vh;
    width: 100vw;
    display: flex;
    justify-content: center;
}


/* Flex Container */
.container {
    display: flex;
    flex-flow: row wrap;
    gap: 5px;
    justify-content: center;
    margin: auto;
    width: 80%;
    height: 100%;
}

/* Flex Items */
.container div {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    font-family: 'Courier New', Courier, monospace;
    width: 30%;
    border: solid 4px var(--secondary);
}

/* Text / Button container + Child attributes*/
.container div div {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    background-color: var(--secondary);
    width: 100%;
    margin: 0;
    padding: 0;
    border-radius: 0%;
    border: none;
    height: 30%;
    align-items: center;
    overflow: auto;
}

.container div div div {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    width: 100%;
    margin: 0;
    padding: 0;
    border-radius: 0%;
    border: none;
    height: 100%;
    align-items: center;
    text-align: center;
}

.container div div h2 {
    color: var(--tertiary);
    margin: auto;
}

.container div div p {
    color: var(--primary);
    margin: auto;
    padding: 5px;
    font-weight: 500;
    border: solid 2px var(--primary);
}

.container div div button {
    margin: auto;
    padding: 5px;
    border-radius: 5%;
    font-size: 20px;
    font-weight: bolder;
    transition: 0.3s;
}

button:hover {
    scale: 110% !important;
    cursor: pointer;
    background-color: var(--tertiary) !important;
}

/* Image cards */

.fc-game {
    background-image: url("./../images/hobby.png");
    background-size: contain;
    background-repeat: no-repeat;
    transition: 0.5s;
}

.fc-game:hover {
    scale: 95%
}

.movie-database {
    background-image: url("./../images/film.png");
    background-size: contain;
    background-position: 50% -2%;
    background-repeat: no-repeat;
    transition: 0.5s;
}

.movie-database:hover {
    scale: 95%
}

.wordle {
    background-image: url("./../images/wordle.png");
    background-size: contain;
    background-repeat: no-repeat;
    transition: 0.5s;
}

.wordle:hover {
    scale: 95%
}

.portfolio {
    background-image: url("./../images/react_portfolio.png");
    background-size: contain;
    background-repeat: no-repeat;
    transition: 0.5s;
}

.portfolio:hover {
    scale: 95%
}

.team {
    background-image: url("./../images/team.png");
    background-size: contain;
    background-repeat: no-repeat;
    transition: 0.5s;
}

.team:hover {
    scale: 95%
}


/* footer */

footer {
    margin-top: 20px;
    height: 35vh;
    width: 100%;
    background-color: var(--secondary);
}

.footer-container {
    display: flex;
    align-items: left;
    flex-flow: column;
    justify-content: center;
    width: 60%;
    height: 100%;
    margin: auto;
    color: var(--primary);
}


footer img {
    padding: 5px;
    margin: 10px;
    height: 100px;
    display: inline;
    transition: 0.3s;
}

footer img:hover {
    scale: 110%
}

footer a {
    text-decoration: none;
    color: var(--primary);
}

/* MODAL */

.modal {
    width: 50%;
    text-align: center;
    border: solid 5px var(--secondary);
    overflow: scroll;
}

.modal h1 {
    text-decoration: underline;
    padding: 5px;
    margin: 5px
}

.modal button {
    margin: auto;
    padding: 5px;
    border-radius: 5%;
    font-size: 20px;
    font-weight: bolder;
    transition: 0.3s;
}

.modal button:hover {
    scale: 110% !important;
    cursor: pointer;
    background-color: var(--tertiary) !important;
}

.modal div {
    display: flex;
    justify-content: space-between;
}

/* TABLET MEDIA QUERY */

@media screen and (max-width: 1600px) {

    .gallery {
        height: auto;
        width: 100vw;
    }

    .container {
        flex-flow: row wrap;
        width: 100%;
        height: auto;
    }

    .container div {
        height: 50vh;
        width: 40%;
    }

    .fc-game {
        background-size: cover;
    }

    .movie-database {
        background-size: cover;
    }

    .wordle {
        background-size: cover;
        background-position: 50% -2%
    }

    .portfolio {
        background-size: cover;
        background-position: 50% -2%
    }

    .team {
        background-size: cover;
    }

    footer {
        height: 50vh;
    }

    footer h2 {
        scale: 80%
    }

    .footer-container {
        align-items: center;
        width: 90%;
        margin: auto;
    }

    .modal {
        width: 80%;
    }

}

/* PHONE MEDIA QUERY */

@media screen and (max-width: 768px) {

    .gallery {
        height: auto;
        width: 100vw;
    }

    .container {
        flex-flow: column;
        width: 100%;
        height: auto;
        align-items: center;
    }

    .container div {
        height: 50vh;
        width: 90%;
    }

    .fc-game {
        background-size: cover;
    }

    .movie-database {
        background-size: cover;
    }

    .wordle {
        background-size: cover;
    }

    .portfolio {
        background-size: cover;
    }

    .team {
        background-size: cover;
    }

    footer {
        height: 50vh;
    }

    footer h2 {
        scale: 80%
    }

    .footer-container {
        align-items: center;
        width: 90%;
        margin: auto;
    }

    .modal {
        width: 90%;
    }
}

